Bug 68739 - [weston-launch]fails with fish as default shell
Summary: [weston-launch]fails with fish as default shell
Status: RESOLVED FIXED
Alias: None
Product: Wayland
Classification: Unclassified
Component: weston (show other bugs)
Version: 1.2.x
Hardware: x86-64 (AMD64) Linux (All)
: medium major
Assignee: Wayland bug list
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-08-30 06:42 UTC by Pavel
Modified: 2013-10-21 22:15 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Pavel 2013-08-30 06:42:02 UTC
Weston uses default shell inside "src/weston-launch.c:launch_compositor",
but "$@" is invalid inside fish shell (and in a lot of other shells, for that matter). So I think we shouldn't use default shell, but rather something like "/bin/sh" or something similar.

Here is example of an error:
$ weston-launch
fish: Could not expand string “"$@"”
Standard input: /usr/bin/weston "$@"
                                ^
Comment 1 Kristian Høgsberg 2013-10-21 22:15:08 UTC
commit fb08e4bdaa9d5c840c0d0d6b1200ce9fab9a93bf
Author: Kristian Høgsberg <krh@bitplanet.net>
Date:   Mon Oct 21 15:14:44 2013 -0700

    weston-launch: Use /bin/sh for launching weston
    
    https://bugs.freedesktop.org/show_bug.cgi?id=68739


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.