weston-launch: Use /bin/sh for launching weston

https://bugs.freedesktop.org/show_bug.cgi?id=68739